Removed the service-content right class to avoid text-aligning to the right

--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -91,10 +91,6 @@
     @include respond(service-break) {
       flex-basis: 100%;
     }
-
-    &--right {
-      text-align: right;
-    }
   }
 
   &__image {
